@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.99 2006/11/15 09:44:23 joerg Exp $
+# $NetBSD: Makefile,v 1.100 2006/11/15 11:29:22 joerg Exp $
 #
 
 COMMENT=	Fonts
@@ -54,6 +54,13 @@ SUBDIR+=	font-adobe-100dpi
 SUBDIR+=	font-adobe-75dpi
 SUBDIR+=	font-adobe-utopia-100dpi
 SUBDIR+=	font-adobe-utopia-75dpi
+SUBDIR+=	font-adobe-utopia-type1
+SUBDIR+=	font-bh-100dpi
+SUBDIR+=	font-bh-75dpi
+SUBDIR+=	font-bh-lucidatypewriter-100dpi
+SUBDIR+=	font-bh-lucidatypewriter-75dpi
+SUBDIR+=	font-bh-ttf
+SUBDIR+=	font-bh-type1
 SUBDIR+=	font-bitstream-type1
 SUBDIR+=	font-cursor-misc
 SUBDIR+=	font-misc-misc
